--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <title>FIERCENETWORK INDEX</title>
 </head>
 <body>
+background="https://previews.123rf.com/images/kotenko/kotenko1403/kotenko140300008/26854631-snowy-winter-in-a-mountain-forest-sunny-cold-day-with-snow-covered-trees-carpathian-mountains-ukrain.jpg">  
 <p>♦️♦️♦️♦️A-A-A-A-A♦️♦️♦️♦️</p>
-<p><a href="https://t.me/fiercenetwork/13891">📌Attack On Titan</a></p>
+<p><a href="https://t.me/fiercenetwork/13891">📌 Attack On Titan</a></p>
 </body>
 </html> 
