--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
 <title>FIERCENETWORK INDEX</title>
 </head>
-<body>
-background="https://previews.123rf.com/images/kotenko/kotenko1403/kotenko140300008/26854631-snowy-winter-in-a-mountain-forest-sunny-cold-day-with-snow-covered-trees-carpathian-mountains-ukrain.jpg">  
+<body background="https://wallpaperaccess.com/full/201322.jpg"> 
 <p>♦️♦️♦️♦️A-A-A-A-A♦️♦️♦️♦️</p>
 <p><a href="https://t.me/fiercenetwork/13891">📌 Attack On Titan</a></p>
 </body>
