--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>FIERCENETWORK INDEX</title>
 </head>
-<body background="https://wallpaperaccess.com/full/201322.jpg"> 
+<body background="https://wallpaperaccess.com/full/201322.jpg" w="1280" height="720" border="1" width="1280"> 
 <p>♦️♦️♦️♦️A-A-A-A-A♦️♦️♦️♦️</p>
 <p><a href="https://t.me/fiercenetwork/13891">📌 Attack On Titan</a></p>
 </body>
