--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     function calcSum() {
         let num1 = document.getElementsByName("number1")[0].value;
         let num2 = document.getElementsByName("number2")[0].value;
-        let sum = String(num1) + String(num2);
+        let sum = Number(num1) + Number(num2);
         document.getElementsByName("sum")[0].value = sum;
     }
 </script>
