--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   margin: 8px 0;
   font-family: "Sofia";
   font-size: larger;
-  background-color: cadetblue;
-  border-color: rgb(0, 195, 255, 0.3);
+  background-color: #0c8a8e;
+  border-color: rgb(0, 107, 142);
   width: 90%;
   border-width: 3px;
   border-radius: 9px;}
