--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <a class="navbar-brand" href="https://t.me/FIERCENETWORK">
-    <img src="https://cdn5.telegram-cdn.org/file/lMBnifGmdH7unHCtnKbggq64YfL2iaNO4bh2i2gnOst5VGaOFRiosAxC4xgj1oH0USq2-QDA4ov1GwFc3Vzvluh0pYSGs3YatATYEeQXmPCDDcx46mg6ze3_2gqihUg5k0GFB8Q1p5wPC8CuZzsrx9-1lihBIf0i1fNFb-G0Y7zcmiIa_3Z7KsFr5DNPB8vsnXxC-lm_g-tbXyVJ1B78M4yWbqS9hEejYfPEkhOuQGJihgjc-OoWgFL3fNDaw3nMOSobVRg9zrVxgfYVvtRKQl-7i7suZE0zQxiSZ4AZBZ-CWnp-50OG1Lf4AM-_1wNxRaGl3w8KgkNBAfNpdLVuSw.jpg" alt="Logo" style="width:40px;">
+    <img src="fiercenetwork.jpg" alt="Logo" style="width:40px;">
     Fierce Network</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
   <span style="color:rgb(70, 70, 192); pointer-events: all;cursor:pointer;">#SayNoToPiracy</span> 
   (We Re-Encode To Save Server Space)
   I Will Remove Any Anime If It Is Infringing Under Collection Use<br> <br>
-  <img src="https://cdn5.telegram-cdn.org/file/Zh_4iEvs4TLwzdGuUO4YNpLEdMVLE_TLykeEnU-kIzc4MfK82NyUMHbpE3Gh6lV1-Kk6tqpYTwTbUHkVPW99hulwh_FK2Ow-yx5p_szojO2tF17pkcNFU5Df_YAMrtej5aLRX9zJqOP7EfMZAhxCm-iskK0W12fZFTkNNTDVO0cADvdGyMdXp_Jy1cnNnBv0ONcx7_svu5sEdbhTuQI7_tYwZaKL2vBMUfxDJsWoGIO32nT8_dXLEVKklr6dfBa1DdJyJkdK4SAP_J9-_mQZNOGPqtuiv38-6EX5DbISCfEtFTbhpZ6rWBXQwELg2SP0zaT2ssZBa_FUFgUUDSQGLw.jpg" alt="LOGO">
+  <img src="fiercenetwork2.jpg" alt="LOGO">
 </div>
 </body>
 </html>
