--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <link rel="stylesheet" href="body.css">
+<!-- <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+ -->
  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <a class="navbar-brand" href="https://t.me/FIERCENETWORK">
@@ -28,7 +32,7 @@
         <a class="nav-link" href="https://t.me/AnimeTalksIndia" target="_blank">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.fiecenetwork2.blogspot.com">Blogs</a>
+        <a class="nav-link" href="https://www.fiecenetwork2.blogspot.com" target="_blank">Blogs</a>
       </li>    
     </ul>
     <form class="form-inline" action="/search.py">
@@ -38,6 +42,7 @@
   </div> 
 </nav>
 <br>
+
 <div class="container">
   We Don't Support Piracy We Just 
   Re-Encoding Those Files 🍣🍣 And Storing It. As There Are Very Few Animes 
