--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 <p id="para">Welcome To FIERCENETWORK Index :) Enjoy</p>
 </div>
 <div>
-<button class="collapsible">♦️♦️♦️♦️#-#-#-#-#♦️♦️♦️♦️</button>
+<button class="collapsible">♦️#-#-#-#-#♦️</button>
 <div class="content">
-  <p class="titles">📌 86 Eighty Six</p>
+  <p class="titles"><a href="animes/5CMPS.html" target="_blank">5 Centimeters Per Second</a></p>
 </div>
 
 <script>
