--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <a class="navbar-brand" href="https://t.me/FIERCENETWORK">
-    <img src="fiercenetwork.jpg" alt="Logo" style="width:40px;">
+    <img src="https://telegra.ph/file/b3231c1b7fe58794acb87.png" alt="Logo" style="width:40px;">
     Fierce Network</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
