--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <span style="color:rgb(70, 70, 192); pointer-events: all;cursor:pointer;">#SayNoToPiracy</span> 
   (We Re-Encode To Save Server Space)
   I Will Remove Any Anime If It Is Infringing Under Collection Use<br> <br>
-  <img src="fiercenetwork2.jpg" alt="LOGO">
+  <img src="https://telegra.ph/file/2dfbb426fe4a69e00edc9.png" alt="LOGO">
 </div>
 </body>
 </html>
