--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div>
 <button class="collapsible">♦️#-#-#-#-#♦️</button>
 <div class="content">
-  <p class="titles"><a href="animes/5CMPS.html" target="_blank">5 Centimeters Per Second</a></p>
+  <p class="titles">📌<a href="animes/5CMPS.html" target="_blank"> 5 Centimeters Per Second</a></p>
 </div>
 
 <script>
