--- a/animes/5CMPS.html
+++ b/animes/5CMPS.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Poppins&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <a class="navbar-brand" href="https://t.me/FIERCENETWORK">
-    <img src="https://telegra.ph/file/2dfbb426fe4a69e00edc9.png" alt="Logo" style="width:40px;">
+    <img src="https://telegra.ph/file/b3231c1b7fe58794acb87.png" alt="Logo" style="width:40px;">
     Fierce Network</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -53,6 +53,11 @@ As years pass by, they continue down their own paths,<br> their distance slowly 
   <button class="collapsible">Download</button>
   <div class="content">
     <p class="titles">📌<a href="https://drive.google.com/file/d/1fz36TazbHnWE50NqCH3k96Spypth0rbv/view" target="_blank">5 Centimetres Per Second</a></p>
+  </div>
+  <div style="margin-bottom: 75px;">
+  </div>
+  <div>
+    <a href="https://t.me/fierce_requests" class="fa fa-telegram"><span  style="font-family: Poppins;font-size : medium; color : white; padding : 10px"> Telegram</span></a><br>
   </div>
   <script>
     var coll = document.getElementsByClassName("collapsible");
